--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <!--<li><a class="nav-link scrollto" href="#speakers">Programação</a></li>-->
           <li><a class="nav-link scrollto" href="#schedule">Cronograma</a></li>
           <li><a class="nav-link scrollto" href="#venue">Localidade</a></li>
-          <li><a class="nav-link scrollto" href="#hotels">Hotel</a></li>
+          <!--<li><a class="nav-link scrollto" href="#hotels">Hotel</a></li>-->
           <!--<li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>-->
           <li><a class="nav-link scrollto" href="#supporters">Patrocinadores</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -481,8 +481,8 @@
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
-                <h3>XXX</h3>
-                <p>A XXXX abriu as portas para receber os Cavaleiros do Estado inteiro, no evento também contamos com hospedagem no Hotel XXX e com o Clube dos Policiais Militares para a diverção da galera!</p>
+                <h3>Loja Lealdade nº 20</h3>
+                <p>A Loja Lealdade nº 20 abriu as portas para receber os Cavaleiros do Estado inteiro, no evento também contamos com hospedagem no Hotel XXX e com o Clube dos Policiais Militares para a diverção da galera!</p>
               </div>
             </div>
           </div>
@@ -562,7 +562,7 @@
 
     </section><!-- End Venue Section -->
 
-    <!-- ======= Hotels Section ======= -->
+    <!-- ======= Hotels Section 
     <section id="hotels" class="section-with-bg" >
 
       <div class="container" data-aos="fade-up">
@@ -593,7 +593,7 @@
         </div>
       </div>
 
-    </section><!-- End Hotels Section -->
+    </section>End Hotels Section -->
 
     <!-- ======= Gallery Section
     <section id="gallery">
@@ -629,6 +629,7 @@
           <h2>Patrocinadores</h2>
         </div>
 
+        <!--
         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="col-lg-3 col-md-4 col-xs-6">
@@ -679,13 +680,13 @@
             </div>
           </div>
 
-        </div>
+        </div>-->
 
       </div>
 
     </section><!-- End Sponsors Section -->
 
-    <!-- =======  F.A.Q Section ======= -->
+    <!-- =======  F.A.Q Section
     <section id="faq">
 
       <div class="container" data-aos="fade-up">
@@ -760,7 +761,7 @@
 
       </div>
 
-    </section><!-- End  F.A.Q Section -->
+    </section>End  F.A.Q Section -->
 
     <!-- ======= Subscribe Section
     <section id="subscribe">
@@ -787,16 +788,16 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Buy Tickets</h2>
-          <p>Velit consequatur consequatur inventore iste fugit unde omnis eum aut.</p>
+          <h2>Inscrições</h2>
+          <p>Escolha o KIT que mais lhe atenda!</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Standard Access</h5>
-                <h6 class="card-price text-center">$150</h6>
+                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Nomâde (Ativo)</h5>
+                <h6 class="card-price text-center">$125</h6>
                 <hr>
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
