--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 class="mb-4 pb-0">CONCLAVE VI<br><span
+      <h1 class="mb-4 pb-0" style="font-family: 'MedievalSharp', cursive;">CONCLAVE VI<br><span
         style="text-shadow: 
         3px 0px 7px rgba(81,67,21,0.8), 
         -3px 0px 7px rgba(81,67,21,0.8), 
@@ -199,19 +199,19 @@
           <p>Confira o cronograma do evento</p>
         </div>
 
-        <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
-          <li class="nav-item">
+        <ul class="nav nav-tabs mt-5" role="tablist" data-aos="fade-up" data-aos-delay="100">
+          <li class="nav-item pad-item">
             <a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Sexta</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item  pad-item">
             <a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Sábado</a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item  pad-item">
             <a class="nav-link" href="#day-3" role="tab" data-bs-toggle="tab">Sábado - NRC</a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item  pad-item">
             <a class="nav-link" href="#day-4" role="tab" data-bs-toggle="tab">Domingo</a>
           </li>
         </ul>
@@ -437,7 +437,7 @@
                  
                 </div>
                 <h4>Clube dos Cabos e Soldados.</h4>
-                <p>No clima de despedida, os Cavaleiros vão confraternizar no Clube XXX.</p>
+                <p>No clima de despedida, os Cavaleiros vão confraternizar no Clube dos Cabos e Soldados.</p>
               </div>
             </div>
 
@@ -482,7 +482,7 @@
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
                 <h3>Loja Lealdade nº 20</h3>
-                <p>A Loja Lealdade nº 20 abriu as portas para receber os Cavaleiros do Estado inteiro, no evento também contamos com hospedagem no Hotel XXX e com o Clube dos Policiais Militares para a diverção da galera!</p>
+                <p>A Loja Lealdade nº 20 abriu as portas para receber os Cavaleiros do Estado inteiro, no evento também contamos com hospedagem no Hotel Central e com o Clube dos Policiais Militares para a diverção da galera!</p>
               </div>
             </div>
           </div>
@@ -800,16 +800,18 @@
                 <h6 class="card-price text-center">$125</h6>
                 <hr>
                 <ul class="fa-ul">
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Community Access</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
+                  <!--<li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Community Access</li>
                   <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
+                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>-->
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Buy Now</button>
+                  <a href="https://forms.gle/opTbrbGgmMQnCwM78">
+                    <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Compre Aqui</button></a>
                 </div>
               </div>
             </div>
@@ -817,20 +819,19 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Pro Access</h5>
-                <h6 class="card-price text-center">$250</h6>
+                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Nomâde (Sênior)</h5>
+                <h6 class="card-price text-center">$135</h6>
                 <hr>
                 <ul class="fa-ul">
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Community Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
-                  <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="pro-access">Buy Now</button>
+                  <a href="https://forms.gle/opTbrbGgmMQnCwM78">
+                    <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Compre Aqui</button></a>
                 </div>
               </div>
             </div>
@@ -839,30 +840,56 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">Premium Access</h5>
-                <h6 class="card-price text-center">$350</h6>
+                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Recruta (Ativo)</h5>
+                <h6 class="card-price text-center">$160</h6>
                 <hr>
                 <ul class="fa-ul">
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Custom Badge</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Community Access</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Workshop Access</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>After Party</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Hospedagem</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Buy Now</button>
+                  <a href="https://forms.gle/opTbrbGgmMQnCwM78">
+                    <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Compre Aqui</button></a>
+                  
                 </div>
 
               </div>
             </div>
           </div>
+
+          <!-- Pro Tier -->
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Recruta (Sênior)</h5>
+                <h6 class="card-price text-center">$190</h6>
+                <hr>
+                <ul class="fa-ul">
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Hospedagem</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
+                </ul>
+                <hr>
+                <div class="text-center">
+                  <a href="https://forms.gle/opTbrbGgmMQnCwM78">
+                  <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="premium-access">Compre Aqui</button></a>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
 
-      <!-- Modal Order Form -->
+      <!-- Modal Order Form
       <div id="buy-ticket-modal" class="modal fade">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -890,10 +917,10 @@
                   <button type="submit" class="btn">Buy Now</button>
                 </div>
               </form>
-            </div>
-          </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-      </div><!-- /.modal -->
+            </div>-->
+          <!--</div>--><!-- /.modal-content -->
+        <!--</div>--><!-- /.modal-dialog -->
+      <!--</div>--><!-- /.modal -->
 
     </section><!-- End Buy Ticket Section -->
 
@@ -999,7 +1026,7 @@
           </div>-->
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h4>Contate-nos</h4>
             <p>
               <strong>Email: </strong>gabinetedoiccepa@outlook.com<br>
             </p>
