--- a/index.html
+++ b/index.html
@@ -490,13 +490,13 @@
 
       </div>
 
-      <div class="container-fluid venue-gallery-container" data-aos="fade-up" data-aos-delay="100">
+      <!--<div class="container-fluid venue-gallery-container" data-aos="fade-up" data-aos-delay="100">
         <div class="row g-0">
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/1.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/1.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/1.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -504,7 +504,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/2.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/2.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/2.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -512,7 +512,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/3.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/3.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/3.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -520,7 +520,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/4.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/4.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/4.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -528,7 +528,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/5.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/5.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/5.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -536,14 +536,14 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/6.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/6.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/6.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/7.jpg" class="glightbox" data-gall="venue-gallery">
+              <a href="assets/img/venue-gallery/7.jpeg" class="glightbox" data-gall="venue-gallery">
                 <img src="assets/img/venue-gallery/7.jpg" alt="" class="img-fluid">
               </a>
             </div>
@@ -552,13 +552,13 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/8.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/8.jpg" alt="" class="img-fluid">
+                <img src="assets/img/venue-gallery/8.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
         </div>
-      </div>
+      </div>-->
 
     </section><!-- End Venue Section -->
 
