mudança do background e alguns textos

--- a/index.html
+++ b/index.html
@@ -629,21 +629,24 @@
           <h2>Patrocinadores</h2>
         </div>
 
-        <!--
+        
         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/1.png" class="img-fluid" alt="">
+              <img src="assets/img/supporters/1.png" class="img-fluid" alt="" style="max-width: 100%;
+              max-height: 120px;">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/2.png" class="img-fluid" alt="">
+              <img src="assets/img/supporters/2.png" class="img-fluid" alt=""
+              style="max-width: 100%;
+              max-height: 120px;">
             </div>
           </div>
-
+          <!--
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/supporters/3.png" class="img-fluid" alt="">
@@ -678,9 +681,9 @@
             <div class="supporter-logo">
               <img src="assets/img/supporters/8.png" class="img-fluid" alt="">
             </div>
-          </div>
+          </div>-->
 
-        </div>-->
+        </div>
 
       </div>
 
@@ -819,7 +822,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card mb-5 mb-lg-0">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Nomâde (Sênior)</h5>
+                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Nomâde (Sênior/Maçom)</h5>
                 <h6 class="card-price text-center">$135</h6>
                 <hr>
                 <ul class="fa-ul">
@@ -865,7 +868,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Recruta (Sênior)</h5>
+                <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Recruta (Sênior/Maçom)</h5>
                 <h6 class="card-price text-center">$190</h6>
                 <hr>
                 <ul class="fa-ul">
