alteração no texto

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>Sobre o Evento</h2>
-            <p>O CONCLAVE VI é o Evento Estadual da Ordem da Cavalaria que ocorre no Esrtado do Pará. No evento os Senhores Cavaleiros da Ordem da Cavalaria se reúnem para contar as boas novas, confraternizar e progredir seus estudos no Nobre Rito da Cavalaria</p>
+            <p>O CONCLAVE VI é o Evento Estadual da Ordem da Cavalaria que ocorre no Estado do Pará. No evento, os Senhores Cavaleiros da Ordem da Cavalaria se reúnem para contar as boas novas, confraternizar e progredir seus estudos no Nobre Rito da Cavalaria.</p>
           </div>
           <div class="col-lg-3">
             <h3>Onde</h3>
@@ -482,7 +482,7 @@
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
                 <h3>Loja Lealdade nº 20</h3>
-                <p>A Loja Lealdade nº 20 abriu as portas para receber os Cavaleiros do Estado inteiro, no evento também contamos com hospedagem no Hotel Central e com o Clube dos Policiais Militares para a diverção da galera!</p>
+                <p>A Loja Lealdade n.º 20 abriu as portas para receber os Cavaleiros do Estado inteiro. No evento, também contamos com hospedagem no Hotel Central e com o Clube dos Policiais Militares para a diversão da galera!</p>
               </div>
             </div>
           </div>
@@ -865,7 +865,7 @@
           </div>
 
           <!-- Pro Tier -->
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 mt-5" data-aos="fade-up" data-aos-delay="300" >
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title text-muted text-uppercase text-center">KIT - Cavaleiro Recruta (Sênior/Maçom)</h5>
@@ -1003,7 +1003,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="assets/img/CONCLAVEAGORAVAI.png" alt="CONCLAVE">
-            <p>O Gabinete do Ilusre Comendador Cavaleiro Estadual tem a honra de convidar todos os Cavaleiros do Estado para esse sublime encontro. Esperamos vocês Cavaleiros, em Capanema nos dias 15, 16 e 17 de Março.</p>
+            <p>O Gabinete do Ilustre Comendador Cavaleiro Estadual tem a honra de convidar todos os Cavaleiros do Estado para esse sublime encontro. Esperamos vocês Cavaleiros, em Capanema, nos dias 15, 16 e 17 de março.</p>
           </div>
 
           <!--<div class="col-lg-3 col-md-6 footer-links">
