--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div>
                  
                 </div>
-                <h4>Palestra XXX.</h4>
+                <h4>Palestra Surpresa.</h4>
               
               </div>
             </div>
