--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Brinde Exclusivo</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
                   <!--<li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Community Access</li>
                   <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Workshop Access</li>
@@ -828,7 +828,7 @@
                 <ul class="fa-ul">
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Brinde Exclusivo</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
                 </ul>
                 <hr>
@@ -850,7 +850,7 @@
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Hospedagem</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Brinde Exclusivo</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
                 </ul>
                 <hr>
@@ -875,7 +875,7 @@
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Alimentação</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Hospedagem</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Camisa</li>
-                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Pin Customizado</li>
+                  <li><span class="fa-li"><i class="fa fa-check"></i></span>Brinde Exclusivo</li>
                   <li><span class="fa-li"><i class="fa fa-check"></i></span>Faixa</li>
                 </ul>
                 <hr>
